force-app/main/default/objects/Project__c/fields/Administrator__c.field-meta.xml
<CustomField>
    <fullName>Administrator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Resource responsible for all the administration on this project.</inlineHelpText>
    <label>Administrator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Projects2</relationshipName>
    <type>Lookup</type>
</CustomField>