force-app/main/default/objects/Project__c/fields/County_Text__c.field-meta.xml
<CustomField>
    <fullName>County_Text__c</fullName>
    <label>County Text</label>
    <type>TextArea</type>
</CustomField>