force-app/main/default/objects/Project__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US GAP</fullName>
            </value>
            <value>
                <fullName>Boston Office</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Refresh</fullName>
            </value>
            <value>
                <fullName>Special Projects</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>