force-app/main/default/objects/Project__c/fields/Division_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Division_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup to Division Object.</inlineHelpText>
    <label>Division</label>
    <referenceTo>Division__c</referenceTo>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>