force-app/main/default/objects/Project__c/fields/Gross_Margin_P__c.field-meta.xml
<CustomField>
    <fullName>Gross_Margin_P__c</fullName>
    <formula>(( Total_Sales_Price__c -  Total_Costs__c )/ Total_Sales_Price__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Margin (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>