force-app/main/default/objects/Project__c/fields/Original_Budget__c.field-meta.xml
<CustomField>
    <fullName>Original_Budget__c</fullName>
    <inlineHelpText>This field is pulled from the Project Budget that has the Original Budget checkbox checked.</inlineHelpText>
    <label>Original Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>