force-app/main/default/objects/Project__c/fields/Project_Completion__c.field-meta.xml
<CustomField>
    <fullName>Project_Completion__c</fullName>
    <inlineHelpText>This field will be updated from the Schedule as you complete schedule items.  You can also manually override this field.</inlineHelpText>
    <label>Project Completion %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>