force-app/main/default/objects/Project__c/fields/Project_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Project_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Engineer</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Projects2</relationshipName>
    <type>Lookup</type>
</CustomField>