force-app/main/default/objects/Project__c/fields/Site_Contact__c.field-meta.xml
<CustomField>
    <fullName>Site_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>