force-app/main/default/objects/Project__c/fields/Total_Costs__c.field-meta.xml
<CustomField>
    <fullName>Total_Costs__c</fullName>
    <inlineHelpText>This values is being pulled from your Budget Total Cost field.</inlineHelpText>
    <label>Total Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>