force-app/main/default/objects/Project__c/fields/Total_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales_Price__c</fullName>
    <inlineHelpText>This number is being pulled from your Total Sales Price field on your Budget.</inlineHelpText>
    <label>Total Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>