force-app/main/default/objects/Project__c/listViews/All_Projects.listView-meta.xml
<ListView>
    <fullName>All_Projects</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Stage__c</columns>
    <columns>Estimated_Completion_Date__c</columns>
    <columns>Address__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>County__c</columns>
    <columns>Zip__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All Projects</label>
</ListView>